Added Launcher documentation and a sample app